--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
       integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
       crossorigin="anonymous"
     />
-    <link rel="icon" href="images/cafe-logo.png" type="image/png" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+
+    <link rel="icon" href="assets/images/Logo.svg" type="image/svg" />
     <title>ARABICA Home</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lexend+Zetta:wght@100..900&family=Sansita+Swashed:wght@300..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container">
@@ -18,28 +26,197 @@
         class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"
       >
         <a
-          href="/"
+          href="/index.html"
           class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
         >
           <img
-            src="images/cafe-logo.png"
-            alt="Cafe Logo"
-            width="40"
-            height="32"
-            class="me-2"
+            src="assets/images/Logo.svg"
+            class="bi me-2"
+            width="150"
+            height="90"
+            alt="Logo"
           />
-          <span class="fs-4">Simple header</span>
         </a>
         <ul class="nav nav-pills">
           <li class="nav-item">
-            <a href="#" class="nav-link active" aria-current="page">Home</a>
+            <a
+              href="index.html"
+              class="nav-link custom-active"
+              aria-current="page"
+              >Home</a
+            >
           </li>
-          <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+          <li class="nav-item">
+            <a
+              href="menu.html"
+              class="nav-link custom-nav-link"
+              aria-current="page"
+              >Menu</a
+            >
+          </li>
+          <li class="nav-item">
+            <a href="contact.html" class="nav-link custom-nav-link">Contact</a>
+          </li>
         </ul>
       </header>
+
+      <div class="row flex-lg-row-reverse align-items-center g-2 py-5">
+        <div class="col-10 col-sm-8 col-lg-6">
+          <img
+            src="assets/images/Default_burger_cinematic_and_of_different_types_flying_burger_1-removebg-preview 1.png"
+            class="d-block mx-lg-auto img-fluid"
+            alt="Burger"
+            width="900"
+            height="550"
+            loading="lazy"
+          />
+        </div>
+        <div class="col-lg-6">
+          <h2 class="display-6 fw-bold text-body-emphasis lh-1 mb-3 hero-h2">
+            The Ultimate
+          </h2>
+          <h1
+            class="display-3 fw-bold text-body-emphasis lh-1 mb-3 sansita-swashed hero-h1"
+          >
+            Burger & Coffee Club
+          </h1>
+          <p class="display-20 text-body-emphasis lh-1 mb-3 hero-p">
+            Savor the Flavor, Join the Club!
+          </p>
+          <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+            <button type="button" class="btn btn-outline-secondary btn-lg px-4">
+              Menu
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <main>
+        <div class="content">
+          <h1 class=" stitle">Welcome To <span class="lexend-zetta">ARABICA</span></h1>
+          <p>
+            Welcome to La Pâtisserie Belle, where every bite is a journey into
+            the exquisite world of finely crafted pastries. Our patisserie is
+            dedicated to bringing you the most delicious and beautifully
+            designed pastries that will delight your senses and elevate your
+            taste experience. Nestled in the heart of the city, our patisserie
+            is a haven for those who appreciate the finer things in life.
+          </p>
+          <button class="btn">Menu</button>
+        </div>
+
+        <div class="stack">
+          <div class="card">
+            <img
+              src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/a36d2695-58f8-4644-9e19-71988334e345"
+              alt=""
+            />
+          </div>
+          <div class="card">
+            <img
+              src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/9f9148ad-74c2-4ebc-a769-bb90fec7b9a5"
+              alt=""
+            />
+          </div>
+          <div class="card">
+            <img
+              src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/ff35104e-3a7e-458f-8077-7ea2780706fa"
+              alt=""
+            />
+          </div>
+          <div class="card">
+            <img
+              src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/060546fb-1cbb-428e-b48d-eae2711a0c83"
+              alt=""
+            />
+          </div>
+          <div class="card">
+            <img
+              src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/7feb903b-33f7-4326-90eb-a4f54c86c68e"
+              alt=""
+            />
+          </div>
+          <div class="card">
+            <img
+              src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/417d1d6b-4100-4419-9e01-37561a354b80"
+              alt=""
+            />
+          </div>
+        </div>
+      </main>
+
+
+
+<section class="feature-section">
+  <div class="text-center py-5">
+    <h2 class="display-5 fw-bold stitle">Why People Love Us</h2>
+    <p class="text-muted hero-p">More than just a café — it’s an experience.</p>
+  </div>
+
+  <div class="showcase-cards">
+
+    <div class="showcase-card showcase-card--1">
+      <div class="showcase-card__img"></div>
+      <div class="showcase-card__img--hover"></div>
+      <div class="showcase-card__info">
+        <h3 class="showcase-card__title">Stunning Interior</h3>
+        <p class="showcase-card__desc">Enjoy our cozy, stylish interior designed for comfort and class.</p>
+      </div>
     </div>
+
+    <div class="showcase-card showcase-card--2">
+      <div class="showcase-card__img"></div>
+      <div class="showcase-card__img--hover"></div>
+      <div class="showcase-card__info">
+        <h3 class="showcase-card__title">Refreshing Drinks</h3>
+        <p class="showcase-card__desc">From fresh juices to creamy coffee — we’ve got your thirst covered.</p>
+      </div>
+    </div>
+
+    <div class="showcase-card showcase-card--3">
+      <div class="showcase-card__img"></div>
+      <div class="showcase-card__img--hover"></div>
+      <div class="showcase-card__info">
+        <h3 class="showcase-card__title">Delicious Burgers</h3>
+        <p class="showcase-card__desc">Our signature burgers and meals are crafted with love and flavor.</p>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+ </div>     
+     <footer class="site-footer">
+  <div class="footer-content container">
+    <div class="footer-column">
+      <h4 class="footer-title">Arabica Café</h4>
+      <p class="footer-text">Famous for Burgers & Coffee. A cozy corner for food lovers and coffee dreamers in Addis.</p>
+    </div>
+
+    <div class="footer-column">
+      <h5 class="footer-heading">Quick Links</h5>
+      <ul class="footer-links">
+        <li><a href="#menu">Menu</a></li>
+        <li><a href="#features">Features</a></li>
+        <li><a href="#location">Location</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h5 class="footer-heading">Contact</h5>
+      <p class="footer-text">Addis Ababa, Ethiopia</p>
+      <p class="footer-text">+251 912 345 678</p>
+      <p class="footer-text">hello@arabicacafe.et</p>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <p>&copy; 2025 Arabica Café. All rights reserved.</p>
+  </div>
+</footer>
+
+    
+    <script src="/assets/js/script.js"></script>
   </body>
 </html>
