--- a/index.html
+++ b/index.html
@@ -20,47 +20,36 @@
       rel="stylesheet"
     />
   </head>
-  <body>
-    <div class="container">
-      <header
-        class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"
-      >
-        <a
-          href="/index.html"
-          class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
-        >
-          <img
-            src="assets/images/Logo.svg"
-            class="bi me-2"
-            width="150"
-            height="90"
-            alt="Logo"
-          />
-        </a>
-        <ul class="nav nav-pills">
-          <li class="nav-item">
-            <a
-              href="index.html"
-              class="nav-link custom-active"
-              aria-current="page"
-              >Home</a
-            >
-          </li>
-          <li class="nav-item">
-            <a
-              href="menu.html"
-              class="nav-link custom-nav-link"
-              aria-current="page"
-              >Menu</a
-            >
-          </li>
-          <li class="nav-item">
-            <a href="contact.html" class="nav-link custom-nav-link">Contact</a>
-          </li>
-        </ul>
-      </header>
+  <body  >
+    <div class="container-fluid  px-0 mx-0">
+      <nav class="navbar navbar-expand-md navbar-dark sticky-top custom-header">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="index.html">
+      <img src="assets/images/Logo.svg" alt="Logo" height="50" />
+    </a>
 
-      <div class="row flex-lg-row-reverse align-items-center g-2 py-5">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse justify-content-end" id="mainNavbar">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a href="index.html" class="nav-link custom-active">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="menu.html" class="nav-link custom-nav-link">Menu</a>
+        </li>
+        <li class="nav-item">
+          <a href="contact.html" class="nav-link custom-nav-link">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+
+      <div class="row flex-lg-row-reverse align-items-center g-2 py-5 hero">
         <div class="col-10 col-sm-8 col-lg-6">
           <img
             src="assets/images/Default_burger_cinematic_and_of_different_types_flying_burger_1-removebg-preview 1.png"
@@ -93,7 +82,7 @@
 
       <main>
         <div class="content">
-          <h1 class=" stitle">Welcome To <span class="lexend-zetta">ARABICA</span></h1>
+          <h1 class=" stitle-2">Welcome To <span class="lexend-zetta">ARABICA</span></h1>
           <p>
             Welcome to La Pâtisserie Belle, where every bite is a journey into
             the exquisite world of finely crafted pastries. Our patisserie is
@@ -186,37 +175,42 @@
 </section>
 
  </div>     
-     <footer class="site-footer">
-  <div class="footer-content container">
-    <div class="footer-column">
-      <h4 class="footer-title">Arabica Café</h4>
-      <p class="footer-text">Famous for Burgers & Coffee. A cozy corner for food lovers and coffee dreamers in Addis.</p>
-    </div>
+    <footer class="site-footer">
+      <div class="footer-content container">
+        <div class="footer-column">
+          <h4 class="footer-title">Arabica Café</h4>
+          <p class="footer-text">
+            Famous for Burgers & Coffee. A cozy corner for food lovers and
+            coffee dreamers in Addis.
+          </p>
+        </div>
 
-    <div class="footer-column">
-      <h5 class="footer-heading">Quick Links</h5>
-      <ul class="footer-links">
-        <li><a href="#menu">Menu</a></li>
-        <li><a href="#features">Features</a></li>
-        <li><a href="#location">Location</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </div>
+        <div class="footer-column">
+          <h5 class="footer-heading">Quick Links</h5>
+          <ul class="footer-links">
+            <li><a href="./menu.html">Menu</a></li>
+            <li><a href="./index.html">Features</a></li>
+            
+            <li><a href="./contact.html">Contact</a></li>
+          </ul>
+        </div>
 
-    <div class="footer-column">
-      <h5 class="footer-heading">Contact</h5>
-      <p class="footer-text">Addis Ababa, Ethiopia</p>
-      <p class="footer-text">+251 912 345 678</p>
-      <p class="footer-text">hello@arabicacafe.et</p>
-    </div>
-  </div>
+        <div class="footer-column">
+          <h5 class="footer-heading">Contact</h5>
+          <p class="footer-text">Addis Ababa, Ethiopia</p>
+          <p class="footer-text">+251 912 345 678</p>
+          <p class="footer-text">hello@arabicacafe.et</p>
+        </div>
+      </div>
 
-  <div class="footer-bottom">
-    <p>&copy; 2025 Arabica Café. All rights reserved.</p>
-  </div>
-</footer>
+      <div class="footer-bottom">
+        <p>&copy; 2025 Arabica Café. All rights reserved.</p>
+      </div>
+    </footer>
 
-    
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
     <script src="/assets/js/script.js"></script>
   </body>
 </html>
