--- a/menu.html
+++ b/menu.html
@@ -274,9 +274,9 @@
 
         <div class="footer-column">
           <h5 class="footer-heading">Contact</h5>
-          <p class="footer-text">Addis Ababa, Ethiopia</p>
-          <p class="footer-text">+251 912 345 678</p>
-          <p class="footer-text">hello@arabicacafe.et</p>
+          <p class="footer-text">Bole, Addis Ababa, Ethiopia</p>
+          <p class="footer-text"> +251 912 345 674</p>
+          <p class="footer-text">arabica@coffee.com</p>
         </div>
       </div>
 
